# ynab-cli

./: .env-sample  .gitignore  404.html  CHANGELOG.md  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: .copilot-instructions.md  FUNDING.yml  dependabot.yml
.github/workflows/: pr.yml  publish-to-pypi.yml
data/: openapi.json
docs/: index.md  transaction_rules.md
search/: search_index.json
src/ynab_cli/: __init__.py
src/ynab_cli/adapters/amazon/: __init__.py  auth_flow.py  browser.py  client.py  constants.py  errors.py  locale.py
src/ynab_cli/adapters/amazon/models/: entity.py  form.py  order.py  order_item.py  order_shipment.py  product.py  refund.py  transaction.py
src/ynab_cli/adapters/amazon/scrapers/: base.py  forms.py  order.py  order_item.py  order_shipment.py  product.py  refund.py  refunds.py  transaction.py  transactions.py
src/ynab_cli/adapters/browser/: browser.py  constants.py  locale.py
src/ynab_cli/adapters/rich/: io.py
src/ynab_cli/adapters/textual/: io.py
src/ynab_cli/adapters/ynab/: __init__.py  api_client.py  client.py  configuration.py  errors.py  rest.py  types.py  util.py
src/ynab_cli/adapters/ynab/api/: __init__.py  accounts_api.py  budgets_api.py  categories_api.py  months_api.py  payee_locations_api.py  payees_api.py  scheduled_transactions_api.py  transactions_api.py  user_api.py
src/ynab_cli/adapters/ynab/api/accounts/: create_account.py  get_account_by_id.py  get_accounts.py
src/ynab_cli/adapters/ynab/api/budgets/: get_budget_by_id.py  get_budget_settings_by_id.py  get_budgets.py
src/ynab_cli/adapters/ynab/api/categories/: get_categories.py  get_category_by_id.py  get_month_category_by_id.py  update_category.py  update_month_category.py
src/ynab_cli/adapters/ynab/api/months/: get_budget_month.py  get_budget_months.py
src/ynab_cli/adapters/ynab/api/payee_locations/: get_payee_location_by_id.py  get_payee_locations.py  get_payee_locations_by_payee.py
src/ynab_cli/adapters/ynab/api/payees/: get_payee_by_id.py  get_payees.py  update_payee.py
src/ynab_cli/adapters/ynab/api/scheduled_transactions/: create_scheduled_transaction.py  delete_scheduled_transaction.py  get_scheduled_transaction_by_id.py  get_scheduled_transactions.py  update_scheduled_transaction.py
src/ynab_cli/adapters/ynab/api/transactions/: create_transaction.py  delete_transaction.py  get_transaction_by_id.py  get_transactions.py  get_transactions_by_account.py  get_transactions_by_category.py  get_transactions_by_month.py  get_transactions_by_payee.py  import_transactions.py  update_transaction.py  update_transactions.py
src/ynab_cli/adapters/ynab/api/user/: get_user.py
src/ynab_cli/adapters/ynab/models/: __init__.py  account.py  account_response.py  account_response_data.py  account_type.py  accounts_response.py  accounts_response_data.py  budget_detail.py  budget_detail_response.py  budget_detail_response_data.py  budget_settings.py  budget_settings_response.py  budget_settings_response_data.py  budget_summary.py  budget_summary_response.py  budget_summary_response_data.py  bulk_response.py  bulk_response_data.py  bulk_response_data_bulk.py  bulk_transactions.py  categories_response.py  categories_response_data.py  category.py  category_goal_type_type_1.py  category_goal_type_type_2_type_1.py  category_goal_type_type_3_type_1.py  category_group.py  category_group_with_categories.py  category_response.py  category_response_data.py  currency_format.py  currency_format_type_0.py  date_format.py  date_format_type_0.py  error_detail.py  error_response.py  existing_transaction.py  get_transactions_by_account_type.py  get_transactions_by_category_type.py  get_transactions_by_month_type.py  (+76 more)
src/ynab_cli/domain/: constants.py  settings.py
src/ynab_cli/domain/models/: __init__.py  rules.py
src/ynab_cli/domain/models/amazon/: __init__.py  transaction_group.py
src/ynab_cli/domain/ports/: __init__.py  io.py
src/ynab_cli/domain/use_cases/: amazon.py  budgets.py  categories.py  payees.py  transactions.py
src/ynab_cli/host/: cli.py  constants.py  container.py
src/ynab_cli/host/cli/: application.py  constants.py
src/ynab_cli/host/cli/commands/: categories.py  payees.py  transactions.py
src/ynab_cli/host/click/: application.py  cli.py  constants.py  container.py
src/ynab_cli/host/click/commands/: amazon.py  budgets.py  categories.py  payees.py  transactions.py
src/ynab_cli/host/click/commands/rich/: progress_table.py
src/ynab_cli/host/textual/: app.py  app.tcss  application.py  cli.py  container.py  types.py
src/ynab_cli/host/textual/widgets/: __init__.py  amazon.py  categories.py  payees.py  tabs.py  transactions.py
src/ynab_cli/host/textual/widgets/categories/: list_all.py  list_unused.py  tabs.py
src/ynab_cli/host/textual/widgets/common/: base_command.py  command_widget.py  runnable_widget.py
src/ynab_cli/host/textual/widgets/payees/: list_all.py  list_duplicates.py  list_unused.py  normalize_names.py  tabs.py
src/ynab_cli/host/textual/widgets/transactions/: apply_rules.py  tabs.py
tests/: __init__.py  conftest.py
tests/factories/: ynab.py
tests/fixtures/adapters/amazon/pages/: README.md  amazon_ap_signin.html  amazon_dp_product.html
tests/integration/domain/use_cases/: test_amazon.py
tests/unit/: conftest.py
tests/unit/adapters/amazon/scrapers/: test_forms.py  test_order.py  test_order_item.py  test_product.py  test_refund.py  test_refunds.py  test_transaction.py  test_transactions.py
tests/unit/adapters/rich/: test_io.py
tests/unit/adapters/textual/: test_io.py
tests/unit/domain/models/: test_rules.py
tests/unit/domain/ports/: test_io.py
tests/unit/domain/use_cases/: test_budgets.py  test_categories.py  test_payees.py  test_transactions.py
tests/unit/host/: conftest.py  test_cli.py
tests/unit/host/click/: conftest.py
tests/unit/host/click/commands/: test_budgets.py  test_categories.py  test_payees.py  test_transactions.py
tests/unit/host/textual/: conftest.py  test_app.py  test_cli.py
transaction_rules/: index.html
(+6 files in other folders)
