[project]
name = "ynab-cli"
version = "0.1.0"
description = "YNAB Command Line Interface"
readme = "README.md"
authors = [
    { name = "Jeff Sawatzky", email = "jeff.sawatzky@me.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp-retry~=2.9",
    "aiohttp~=3.11",
    "click~=8.1",
    "pydantic~=2.11",
    "python-dateutil~=2.9",
    "python-dotenv~=1.1",
    "rapidfuzz~=3.13",
    "rule-engine~=4.5",
    "urllib3~=2.3",
]

[project.scripts]
ynab = "ynab_cli.host.cli.application:main"


[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mypy>=1.15.0",
    "pytest-cov>=6.1.1",
    "pytest-factoryboy>=2.7.0",
    "pytest-randomly>=3.16.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
    "types-python-dateutil>=2.9.0.20241206",
]


[tool.mypy]
python_version = "3.11"
plugins = [
  "pydantic.mypy",
]
exclude = [
  '^src/ynab_cli/adapters/ynab/.*\.py$',
  '^tests/.*\.py$'
]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true
enable_error_code = [
  "explicit-override",
]

[[tool.mypy.overrides]]
module = [
  "factory.*",
  "rule_engine.*",
]
ignore_missing_imports = true


[tool.ruff]
fix = true
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "W",   # warnings
    "I",   # isort
    "C90", # mccabe
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "DTZ", # flake8-datetimez
    "PT",  # flake8-pytest-style
    "TID", # flake8-tidy-imports
    "RUF", # ruff specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.ruff.lint.isort]
known-first-party = ["ynab_cli", "tests"]

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["type"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"