[project]
name = "ynab-cli"
version = "0.6.3"
description = "YNAB Command Line Interface"
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
license = "MIT"

license-files = [
  "LICENSE.md"
]

authors = [
  { name = "Jeff Sawatzky" }
]

keywords = [
  "ynab",
  "cli",
  "textual",
  "click",
  "budget",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Utilities",
  "Topic :: Office/Business :: Financial",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "anyio~=4.10",
  "attrs~=25.3",
  "click-default-group~=1.2",
  "click~=8.2",
  "httpx~=0.28",
  "lagom~=2.7",
  "python-dateutil~=2.9",
  "python-dotenv~=1.1",
  "rapidfuzz~=3.14",
  "rich~=14.1",
  "rule-engine~=4.5",
  "textual-fspicker~=0.6",
  "textual~=6.1",
  "typing-extensions~=4.15",
  "uvloop~=0.21",
]

[project.urls]
Changelog = "https://github.com/jeffsawatzky/ynab-cli/blob/main/CHANGELOG.md"
Documentation = "https://jeffsawatzky.github.io/ynab-cli/"
Funding = "https://github.com/sponsors/jeffsawatzky"
Releases = "https://github.com/jeffsawatzky/ynab-cli/releases"
Source = "https://github.com/jeffsawatzky/ynab-cli"

[project.scripts]
ynab-cli = "ynab_cli.host.cli:main"


[dependency-groups]
dev = [
  "commitizen~=4.9",
  "factory-boy~=3.3",
  "mkdocs-click~=0.9",
  "mkdocs-material~=9.6",
  "mkdocs~=1.6",
  "mypy~=1.18",
  "pytest-cov~=7.0",
  "pytest-mock~=3.15",
  "pytest~=8.4",
  "ruff~=0.13",
  "textual-dev~=1.7",
  "trio~=0.31",
  "types-python-dateutil~=2.9",
]


[tool.mypy]
python_version = "3.11"
exclude = [
  '^tests/.*\.py$'
]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true
enable_error_code = [
  "explicit-override",
]

[[tool.mypy.overrides]]
module = [
  "click_default_group.*",
  "factory.*",
  "rule_engine.*",
]
ignore_missing_imports = true


[tool.ruff]
fix = true
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = [
  "W",   # warnings
  "I",   # isort
  "C90", # mccabe
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "DTZ", # flake8-datetimez
  "PT",  # flake8-pytest-style
  "TID", # flake8-tidy-imports
  "RUF", # ruff specific rules
]
extend-ignore = [
  "S110",   # `try`-`except`-`pass` detected
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.ruff.lint.isort]
known-first-party = ["ynab_cli", "tests"]

[tool.ruff.lint.mccabe]
max-complexity = 70

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["type", "id"]


[tool.coverage.run]
omit = [
  "src/ynab_cli/adapters/ynab/**/*",
]


[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
